--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "framer-motion": "^12.23.26",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "nextjs-toploader": "^3.9.17",
