--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
