--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "nextjs-toploader": "^3.9.17",
+    "plyr": "^3.8.3",
+    "plyr-react": "^6.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
