--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
+    "hls.js": "^1.6.15",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
