--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-auth": "^4.24.13",
     "nextjs-toploader": "^3.9.17",
     "plyr": "^3.8.3",
     "plyr-react": "^6.0.0",
