--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
+    "resend": "^6.6.0",
+    "rss-parser": "^3.13.0",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
